Refactored/Formatted reega.controllers